[package]
name = "amm-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }
# Pin crates that adopted edition2024 to versions compatible with platform-tools v1.48 (Cargo 1.84)
blake3 = "=1.5.0"
indexmap = "=2.2.6"
zeroize_derive = "=1.4.2"